# ChangeLog for media-video/gpac
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.49 2007/11/27 12:08:54 zzam Exp $

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> gpac-0.4.2.ebuild,
  gpac-0.4.2-r1.ebuild, gpac-0.4.4.ebuild:
  Fixed quoting.

  29 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> gpac-0.4.2.ebuild:
  Lock wxGTK to 2.6.

  24 Sep 2007; Raúl Porcel <armin76@gentoo.org> gpac-0.4.4.ebuild:
  Add ~alpha wrt #189692

  09 Sep 2007; Joseph Jezak <josejx@gentoo.org> gpac-0.4.4.ebuild:
  Added ~ppc/~ppc64 for bug #189692.

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org> gpac-0.4.4.ebuild:
  opengl also needs glut, fixing deps, thanks to Rickard Närström
  <rickard.narstrom@gmail.com>, bug #190263

  23 Aug 2007; Roy Marples <uberlord@gentoo.org> gpac-0.4.4.ebuild:
  Keyworded ~x860-fbsd, #189692

  23 Aug 2007; Alexis Ballier <aballier@gentoo.org> gpac-0.4.4.ebuild:
  Update bsd patch, thanks to uberlord (bug #189692), add a patch to have
  correct defines in source files, allowing largefile support, thanks to Honza
  Fikar <jan.fikar@psi.ch>, bug #189630

*gpac-0.4.4 (22 Aug 2007)

  22 Aug 2007; Alexis Ballier <aballier@gentoo.org> +gpac-0.4.4.ebuild:
  version bump, bug #189692, dropping some keywords for missing openjpeg lib

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; gpac-0.4.2.ebuild,
  gpac-0.4.2-r1.ebuild:
  Drop virtual/x11 references.

  14 May 2007; Ryan Hill <dirtyepic@gentoo.org> gpac-0.4.2-r1.ebuild:
  Use wxwidgets.eclass.  Touch up ebuild.

  11 Apr 2007; Alexis Ballier <aballier@gentoo.org>
  +files/gpac-0.4.2-ffmpeg-errno.patch, gpac-0.4.2-r1.ebuild:
  fix build with recent ffmpeg snapshots, bug #173772

  14 Feb 2007; Alexis Ballier <aballier@gentoo.org>
  -files/gpac-0.4.0-downloader.patch,
  -files/gpac-0.4.1_pre20060122-DESTDIR.patch,
  -files/gpac-0.4.1_pre20060122-configure-ogg.patch, -gpac-0.4.0.ebuild,