@@ -47,14 +47,14 @@ EBUILD gpac-0.4.2.ebuild 3871 RMD160 f60d0a1612e2e79ef13fd15eebb303f0fac39cf0 SH
 MD5 a5488b587c51cdd5e8fb6c91bafb0dc9 gpac-0.4.2.ebuild 3871
 RMD160 f60d0a1612e2e79ef13fd15eebb303f0fac39cf0 gpac-0.4.2.ebuild 3871
 SHA256 2fcbc85118bd2d1198350fed1b7420323d437269b1844fe4e60e5c9dd4113184 gpac-0.4.2.ebuild 3871
-EBUILD gpac-0.4.4.ebuild 3913 RMD160 ebfc74464fac8be8fa087c1cb8074a51fb7809fc SHA1 f3e7e60be5ecf4bcde6455070bb765c8a4a8da69 SHA256 486c26d2e8cb3d5448d43b248de0ef00781dd044260ae9230e312af8eab9231c
-MD5 023f47cdf90373d7f9abf4632fef0955 gpac-0.4.4.ebuild 3913
-RMD160 ebfc74464fac8be8fa087c1cb8074a51fb7809fc gpac-0.4.4.ebuild 3913
-SHA256 486c26d2e8cb3d5448d43b248de0ef00781dd044260ae9230e312af8eab9231c gpac-0.4.4.ebuild 3913
-MISC ChangeLog 7392 RMD160 6d64cfda25a166ed1b635fb08cf13a1248794d97 SHA1 71b5434491c8be0c2b73c15143f032c515b7900e SHA256 898bc8edde3ccd158a441d0b42792a192b47d76259c6a263c4ab95c55b222237
-MD5 a0d3918d1ee2ca0d095bb68231117967 ChangeLog 7392
-RMD160 6d64cfda25a166ed1b635fb08cf13a1248794d97 ChangeLog 7392
-SHA256 898bc8edde3ccd158a441d0b42792a192b47d76259c6a263c4ab95c55b222237 ChangeLog 7392
+EBUILD gpac-0.4.4.ebuild 3966 RMD160 15edfa86ca85cf1798aa25f86e9f3e94a7b59acf SHA1 7a4225fc2ce4329b0895be61b772a651d9f4171a SHA256 c9e09e78f3613c3eebc6e768784737e0ac03c66b36680ef1b4f01492859c9acb
+MD5 27d22b634db3faabe1c2f0efb081bce2 gpac-0.4.4.ebuild 3966
+RMD160 15edfa86ca85cf1798aa25f86e9f3e94a7b59acf gpac-0.4.4.ebuild 3966
+SHA256 c9e09e78f3613c3eebc6e768784737e0ac03c66b36680ef1b4f01492859c9acb gpac-0.4.4.ebuild 3966
+MISC ChangeLog 7517 RMD160 cd05e865cb9331a9fbaadd0a4a97a5a933d3a327 SHA1 62a820ccdfca5a0847e8d5fcb2a0b745c10c0cd2 SHA256 0282d0c067c2be7eff27b5f8bf885c47abf52b669a2200cf4de1017d5c4e8e51
+MD5 747f8bd530b21fc8c0590af2c9b86c4f ChangeLog 7517
+RMD160 cd05e865cb9331a9fbaadd0a4a97a5a933d3a327 ChangeLog 7517
+SHA256 0282d0c067c2be7eff27b5f8bf885c47abf52b669a2200cf4de1017d5c4e8e51 ChangeLog 7517
 MISC metadata.xml 347 RMD160 41aa55c1c1abb3244d641ac280b0ff134fd20720 SHA1 08f88c0a9437bad24a2c6655e8e370870145c833 SHA256 702b878c0a6c23d19442ee367c51725d5f7c0a61e0c7b2a57a2708f4622ba8fc
 MD5 cb378e7131783653c967c6365ca31a16 metadata.xml 347
 RMD160 41aa55c1c1abb3244d641ac280b0ff134fd20720 metadata.xml 347
@@ -71,7 +71,7 @@ SHA256 544bd82ee79dd2bfcbdb342f9b291ad51ed62c1c661dc82c2a0e14085aec9bf6 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHTAjet2vP6XvVdOcRAiUtAKC2FDpOACQBMrA5kxj/B8gh02hIHQCfZeFN
-Xupt3iaS2ARkJLOE+Rxduv0=
-=q3CH
+iD8DBQFHXHw3vFcC4BYPU0oRAtUJAJ9xo/BDF+7k9beoliILex8xHxTCJQCgl1+X
+QYhDwj3OSuvR898U/XVNKpg=
+=ehEA
 -----END PGP SIGNATURE-----
