@@ -1,6 +1,9 @@
 # ChangeLog for media-video/gpac
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.49 2007/11/27 12:08:54 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.50 2007/12/09 23:37:15 aballier Exp $
+
+  09 Dec 2007; Alexis Ballier <aballier@gentoo.org> gpac-0.4.4.ebuild:
+  add support for unicode wxwidgets, bug #201509
 
   27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> gpac-0.4.2.ebuild,
   gpac-0.4.2-r1.ebuild, gpac-0.4.4.ebuild:
